--- a/comics/151/index.html
+++ b/comics/151/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #150: Driver's License</title>
+    <title>comiCSS #151: Frankenstein's Monster</title>
 
-    <meta property="og:title" content="comiCSS #150: Driver's License" />
+    <meta property="og:title" content="comiCSS #151: Frankenstein's Monster" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art/comics/150" />
-    <meta property="og:image" content="https://comicss.art/comics/150/thumb.png" />
-    <meta property="og:description" content="Why do Web Developers have a tough time getting a driver's license? They pass the written test or the driving test, but they rarely clear:both" />
+    <meta property="og:url" content="https://comicss.art/comics/151" />
+    <meta property="og:image" content="https://comicss.art/comics/151/thumb.png" />
+    <meta property="og:description" content="Comic with 4 panels. In the first one Frankenstein's Monster looks menacing yelling 'Be very scared of Frankenstein's Monster!'. A person replies 'You are not a monster, you are just misunderstood'. The monster replies 'I use divs as buttons... on purpose'. The person looks disappointed and terrified in the last panel." />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://comicss.art/comics/150">
-    <meta name="twitter:title" content="comiCSS #150: Driver's License">
-    <meta name="twitter:description" content="Why do Web Developers have a tough time getting a driver's license? They pass the written test or the driving test, but they rarely clear:both">
-    <meta name="twitter:image" content="https://comicss.art/comics/150/thumb.png">
+    <meta name="twitter:url" content="https://comicss.art/comics/151">
+    <meta name="twitter:title" content="comiCSS #151: Frankenstein's Monster">
+    <meta name="twitter:description" content="Comic with 4 panels. In the first one Frankenstein's Monster looks menacing yelling 'Be very scared of Frankenstein's Monster!'. A person replies 'You are not a monster, you are just misunderstood'. The monster replies 'I use divs as buttons... on purpose'. The person looks disappointed and terrified in the last panel.">
+    <meta name="twitter:image" content="https://comicss.art/comics/151/thumb.png">
     <meta name="monetization" content="$ilp.uphold.com/raZZQiMDDWLe" />
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art/comics/150" />
+    <link rel="canonical" href="https://comicss.art/comics/151" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -102,7 +102,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Driver's License</h1>
+      <h1>Frankenstein's Monster</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,7 +111,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/149" rel="prev">
+        <a href="/comics/150" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/151" rel="next">
+        <a href="/comics/152" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,8 +139,11 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="vertical" aria-label="Why do Web Developers have a tough time getting a driver's license? They pass the written test or the driving test, but they rarely clear:both">
-        <img src="/comics/150/150-drivers-license-0.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="" aria-label="Comic with 4 panels. In the first one Frankenstein's Monster looks menacing yelling 'Be very scared of Frankenstein's Monster!'. A person replies 'You are not a monster, you are just misunderstood'. The monster replies 'I use divs as buttons... on purpose'. The person looks disappointed and terrified in the last panel.">
+        <img src="/comics/151/151-frankensteins-monster-0.webp" alt="" width="350" />
+        <img src="/comics/151/151-frankensteins-monster-1.webp" alt="" width="350" />
+        <img src="/comics/151/151-frankensteins-monster-2.webp" alt="" width="350" />
+        <img src="/comics/151/151-frankensteins-monster-3.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -150,7 +153,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/149" rel="prev">
+        <a href="/comics/150" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -164,7 +167,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/151" rel="next">
+        <a href="/comics/152" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -178,9 +181,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/150">https://comicss.art/comics/150</a></p>
-      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/150/drivers-license.png">https://comicss.art/comics/150/drivers-license.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/150/drivers-license.html" rel="alternate">https://comicss.art/comics/150/drivers-license.html</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/151">https://comicss.art/comics/151</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/151/frankensteins-monster.png">https://comicss.art/comics/151/frankensteins-monster.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/151/frankensteins-monster.html" rel="alternate">https://comicss.art/comics/151/frankensteins-monster.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -218,7 +221,7 @@
       </nav>
     </footer>
 
-    <script>let postId = 150;</script>
+    <script>let postId = 151;</script>
     <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
