--- a/comics/152/index.html
+++ b/comics/152/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #150: Driver's License</title>
+    <title>comiCSS #152: Costumes</title>
 
-    <meta property="og:title" content="comiCSS #150: Driver's License" />
+    <meta property="og:title" content="comiCSS #152: Costumes" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art/comics/150" />
-    <meta property="og:image" content="https://comicss.art/comics/150/thumb.png" />
-    <meta property="og:description" content="Why do Web Developers have a tough time getting a driver's license? They pass the written test or the driving test, but they rarely clear:both" />
+    <meta property="og:url" content="https://comicss.art/comics/152" />
+    <meta property="og:image" content="https://comicss.art/comics/152/thumb.png" />
+    <meta property="og:description" content="Cartoon with 4 panels titled 'halloween costumes'. First panel: the CSS3 logo with a skeleton make up on, and the text 'CSS will go as a skeleton... because it is at the core of all styling'. Second panel: the CSS modules logo with Frankenstein's monster features, and the text 'CSS Modules will go as Frankenstein because it is made of many parts and components'. Third panel: The boostrap logo wrapped in clothe, and the text: 'Bootstrap will go as a mummy... because it is old and dusty, but it gets the job done'. In the last panel, the Tailwind logo with fangs and the text: 'Tailwind will be Dracula... because it sucks.'"" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://comicss.art/comics/150">
-    <meta name="twitter:title" content="comiCSS #150: Driver's License">
-    <meta name="twitter:description" content="Why do Web Developers have a tough time getting a driver's license? They pass the written test or the driving test, but they rarely clear:both">
-    <meta name="twitter:image" content="https://comicss.art/comics/150/thumb.png">
+    <meta name="twitter:url" content="https://comicss.art/comics/152">
+    <meta name="twitter:title" content="comiCSS #152: Costumes">
+    <meta name="twitter:description" content="Cartoon with 4 panels titled 'halloween costumes'. First panel: the CSS3 logo with a skeleton make up on, and the text 'CSS will go as a skeleton... because it is at the core of all styling'. Second panel: the CSS modules logo with Frankenstein's monster features, and the text 'CSS Modules will go as Frankenstein because it is made of many parts and components'. Third panel: The boostrap logo wrapped in clothe, and the text: 'Bootstrap will go as a mummy... because it is old and dusty, but it gets the job done'. In the last panel, the Tailwind logo with fangs and the text: 'Tailwind will be Dracula... because it sucks.'"">
+    <meta name="twitter:image" content="https://comicss.art/comics/152/thumb.png">
     <meta name="monetization" content="$ilp.uphold.com/raZZQiMDDWLe" />
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art/comics/150" />
+    <link rel="canonical" href="https://comicss.art/comics/152" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Driver's License</h1>
+      <h1>CSS Halloween Party</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,7 +111,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/149" rel="prev">
+        <a href="/comics/151" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/151" rel="next">
+        <a href="/comics/153" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,8 +139,11 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="vertical" aria-label="Why do Web Developers have a tough time getting a driver's license? They pass the written test or the driving test, but they rarely clear:both">
-        <img src="/comics/150/150-drivers-license-0.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="" aria-label="Cartoon with 4 panels titled 'halloween costumes'. First panel: the CSS3 logo with a skeleton make up on, and the text 'CSS will go as a skeleton... because it is at the core of all styling'. Second panel: the CSS modules logo with Frankenstein's monster features, and the text 'CSS Modules will go as Frankenstein because it is made of many parts and components'. Third panel: The boostrap logo wrapped in clothe, and the text: 'Bootstrap will go as a mummy... because it is old and dusty, but it gets the job done'. In the last panel, the Tailwind logo with fangs and the text: 'Tailwind will be Dracula... because it sucks.'"">
+        <img src="/comics/152/152-costumes-0.webp" alt="" width="350" />
+        <img src="/comics/152/152-costumes-1.webp" alt="" width="350" />
+        <img src="/comics/152/152-costumes-2.webp" alt="" width="350" />
+        <img src="/comics/152/152-costumes-3.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -150,7 +153,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/149" rel="prev">
+        <a href="/comics/151" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -164,7 +167,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/151" rel="next">
+        <a href="/comics/153" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -178,9 +181,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/150">https://comicss.art/comics/150</a></p>
-      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/150/drivers-license.png">https://comicss.art/comics/150/drivers-license.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/150/drivers-license.html" rel="alternate">https://comicss.art/comics/150/drivers-license.html</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/152">https://comicss.art/comics/152</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/152/costumes.png">https://comicss.art/comics/152/costumes.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/152/costumes.html" rel="alternate">https://comicss.art/comics/152/costumes.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -218,7 +221,7 @@
       </nav>
     </footer>
 
-    <script>let postId = 150;</script>
+    <script>let postId = 152;</script>
     <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
