--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Driver's License</h1>
+      <h1>Costumes</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,7 +111,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/149" rel="prev">
+        <a href="/comics/151" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -139,8 +139,11 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="Why do Web Developers have a tough time getting a driver's license? They pass the written test or the driving test, but they rarely clear:both">
-        <img src="/comics/150/150-drivers-license-0.webp" alt="" width="350" />
+      <div id="comic-strip" class="" role="img" aria-label="Cartoon with 4 panels titled 'halloween costumes'. First panel: the CSS3 logo with a skeleton make up on, and the text 'CSS will go as a skeleton... because it is at the core of all styling'. Second panel: the CSS modules logo with Frankenstein's monster features, and the text 'CSS Modules will go as Frankenstein because it is made of many parts and components'. Third panel: The boostrap logo wrapped in clothe, and the text: 'Bootstrap will go as a mummy... because it is old and dusty, but it gets the job done'. In the last panel, the Tailwind logo with fangs and the text: 'Tailwind will be Dracula... because it sucks.'"">
+        <img src="/comics/152/152-costumes-0.webp" alt="" width="350" />
+        <img src="/comics/152/152-costumes-1.webp" alt="" width="350" />
+        <img src="/comics/152/152-costumes-2.webp" alt="" width="350" />
+        <img src="/comics/152/152-costumes-3.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -150,7 +153,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/149" rel="prev">
+        <a href="/comics/151" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -178,9 +181,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/150">https://comicss.art/comics/150</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/150/drivers-license.png">https://comicss.art/comics/150/drivers-license.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/150/drivers-license.html" rel="alternate">https://comicss.art/comics/150/drivers-license.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/152">https://comicss.art/comics/152</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/152/costumes.png">https://comicss.art/comics/152/costumes.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/152/costumes.html" rel="alternate">https://comicss.art/comics/152/costumes.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -219,7 +222,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2024-09-04"></script>
+    <script src="/js/data.js?last-updated=2024-10-05"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
