new comic: reading

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Leaving the University</h1>
+      <h1>Reading</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,7 +111,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/159" rel="prev">
+        <a href="/comics/160" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -139,8 +139,11 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="why did the repeating-conic-gradient leave the university? It already had 360 degrees">
-        <img src="/comics/160/160-repeating-conic-gradient-0.webp" alt="" width="350" />
+      <div id="comic-strip" class="" role="img" aria-label="comic with for panels, there are two characters talking about what they have been reading and talking about how long it is compared to previous works from the same author, it took them a long time to read it. A third person arrives and asks what novel they are reading. They reply they are not reading any novel, they are reviewing some Tailwind code.">
+        <img src="/comics/161/161-reading-0.webp" alt="" width="350" />
+        <img src="/comics/161/161-reading-1.webp" alt="" width="350" />
+        <img src="/comics/161/161-reading-2.webp" alt="" width="350" />
+        <img src="/comics/161/161-reading-3.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -150,7 +153,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/159" rel="prev">
+        <a href="/comics/160" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -178,9 +181,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/160">https://comicss.art/comics/160</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/160/repeating-conic-gradient.png">https://comicss.art/comics/160/repeating-conic-gradient.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/160/repeating-conic-gradient.html" rel="alternate">https://comicss.art/comics/160/repeating-conic-gradient.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/161">https://comicss.art/comics/161</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/161/reading.png">https://comicss.art/comics/161/reading.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/161/reading.html" rel="alternate">https://comicss.art/comics/161/reading.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -219,7 +222,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2024-10-15"></script>
+    <script src="/js/data.js?last-updated=2024-10-19"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
