--- a/comics/161/index.html
+++ b/comics/161/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #160: Leaving the University</title>
+    <title>comiCSS #161: Reading</title>
 
-    <meta property="og:title" content="comiCSS #160: Leaving the University" />
+    <meta property="og:title" content="comiCSS #161: Reading" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art/comics/160" />
-    <meta property="og:image" content="https://comicss.art/comics/160/thumb.png" />
-    <meta property="og:description" content="why did the repeating-conic-gradient leave the university? It already had 360 degrees" />
+    <meta property="og:url" content="https://comicss.art/comics/161" />
+    <meta property="og:image" content="https://comicss.art/comics/161/thumb.png" />
+    <meta property="og:description" content="comic with for panels, there are two characters talking about what they have been reading and talking about how long it is compared to previous works from the same author, it took them a long time to read it. A third person arrives and asks what novel they are reading. They reply they are not reading any novel, they are reviewing some Tailwind code." />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://comicss.art/comics/160">
-    <meta name="twitter:title" content="comiCSS #160: Leaving the University">
-    <meta name="twitter:description" content="why did the repeating-conic-gradient leave the university? It already had 360 degrees">
-    <meta name="twitter:image" content="https://comicss.art/comics/160/thumb.png">
+    <meta name="twitter:url" content="https://comicss.art/comics/161">
+    <meta name="twitter:title" content="comiCSS #161: Reading">
+    <meta name="twitter:description" content="comic with for panels, there are two characters talking about what they have been reading and talking about how long it is compared to previous works from the same author, it took them a long time to read it. A third person arrives and asks what novel they are reading. They reply they are not reading any novel, they are reviewing some Tailwind code.">
+    <meta name="twitter:image" content="https://comicss.art/comics/161/thumb.png">
     <meta name="monetization" content="$ilp.uphold.com/raZZQiMDDWLe" />
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art/comics/160" />
+    <link rel="canonical" href="https://comicss.art/comics/161" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Leaving the University</h1>
+      <h1>Reading</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,7 +111,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/159" rel="prev">
+        <a href="/comics/160" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/161" rel="next">
+        <a href="/comics/162" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,8 +139,11 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="vertical" aria-label="why did the repeating-conic-gradient leave the university? It already had 360 degrees">
-        <img src="/comics/160/160-repeating-conic-gradient-0.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="" aria-label="comic with for panels, there are two characters talking about what they have been reading and talking about how long it is compared to previous works from the same author, it took them a long time to read it. A third person arrives and asks what novel they are reading. They reply they are not reading any novel, they are reviewing some Tailwind code.">
+        <img src="/comics/161/161-reading-0.webp" alt="" width="350" />
+        <img src="/comics/161/161-reading-1.webp" alt="" width="350" />
+        <img src="/comics/161/161-reading-2.webp" alt="" width="350" />
+        <img src="/comics/161/161-reading-3.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -150,7 +153,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/159" rel="prev">
+        <a href="/comics/160" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -164,7 +167,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/161" rel="next">
+        <a href="/comics/162" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -178,9 +181,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/160">https://comicss.art/comics/160</a></p>
-      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/160/repeating-conic-gradient.png">https://comicss.art/comics/160/repeating-conic-gradient.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/160/repeating-conic-gradient.html" rel="alternate">https://comicss.art/comics/160/repeating-conic-gradient.html</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/161">https://comicss.art/comics/161</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/161/reading.png">https://comicss.art/comics/161/reading.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/161/reading.html" rel="alternate">https://comicss.art/comics/161/reading.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -218,7 +221,7 @@
       </nav>
     </footer>
 
-    <script>let postId = 160;</script>
+    <script>let postId = 161;</script>
     <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
