new comic: halloween masks

--- a/comics/163/index.html
+++ b/comics/163/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #162: Organs</title>
+    <title>comiCSS #163: Halloween Logic Gates</title>
 
-    <meta property="og:title" content="comiCSS #162: Organs" />
+    <meta property="og:title" content="comiCSS #163: Halloween Logic Gates" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art/comics/162" />
-    <meta property="og:image" content="https://comicss.art/comics/162/thumb.png" />
-    <meta property="og:description" content="comic with four panels showcasing organs. The lungs say 'we breathe air for you', the heart says 'I pump blood for you', the liver says 'I filter was for you', and the brain says 'use table layout, floats everywhere, hardcode all values'" />
+    <meta property="og:url" content="https://comicss.art/comics/163" />
+    <meta property="og:image" content="https://comicss.art/comics/163/thumb.png" />
+    <meta property="og:description" content="Cartoon with different panels showing a pumpkin made with two circles. Only some parts of it have colors: trick OR treat has the whole pumpkin in orange; trick AND treat only the part where the circles intersect; etc." />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://comicss.art/comics/162">
-    <meta name="twitter:title" content="comiCSS #162: Organs">
-    <meta name="twitter:description" content="comic with four panels showcasing organs. The lungs say 'we breathe air for you', the heart says 'I pump blood for you', the liver says 'I filter was for you', and the brain says 'use table layout, floats everywhere, hardcode all values'">
-    <meta name="twitter:image" content="https://comicss.art/comics/162/thumb.png">
+    <meta name="twitter:url" content="https://comicss.art/comics/163">
+    <meta name="twitter:title" content="comiCSS #163: Halloween Logic Gates">
+    <meta name="twitter:description" content="Cartoon with different panels showing a pumpkin made with two circles. Only some parts of it have colors: trick OR treat has the whole pumpkin in orange; trick AND treat only the part where the circles intersect; etc.">
+    <meta name="twitter:image" content="https://comicss.art/comics/163/thumb.png">
     <meta name="monetization" content="$ilp.uphold.com/raZZQiMDDWLe" />
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art/comics/162" />
+    <link rel="canonical" href="https://comicss.art/comics/163" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Organs</h1>
+      <h1>Halloween Logic Gates</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,7 +111,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/161" rel="prev">
+        <a href="/comics/162" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/163" rel="next">
+        <a href="/comics/164" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,11 +139,13 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="" aria-label="comic with four panels showcasing organs. The lungs say 'we breathe air for you', the heart says 'I pump blood for you', the liver says 'I filter was for you', and the brain says 'use table layout, floats everywhere, hardcode all values'">
-        <img src="/comics/162/162-organs-0.webp" alt="" width="350" />
-        <img src="/comics/162/162-organs-1.webp" alt="" width="350" />
-        <img src="/comics/162/162-organs-2.webp" alt="" width="350" />
-        <img src="/comics/162/162-organs-3.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="horizontal" aria-label="Cartoon with different panels showing a pumpkin made with two circles. Only some parts of it have colors: trick OR treat has the whole pumpkin in orange; trick AND treat only the part where the circles intersect; etc.">
+        <img src="/comics/163/163-logic-gates-0.webp" alt="" width="350" />
+        <img src="/comics/163/163-logic-gates-1.webp" alt="" width="350" />
+        <img src="/comics/163/163-logic-gates-2.webp" alt="" width="350" />
+        <img src="/comics/163/163-logic-gates-3.webp" alt="" width="350" />
+        <img src="/comics/163/163-logic-gates-4.webp" alt="" width="350" />
+        <img src="/comics/163/163-logic-gates-5.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -153,7 +155,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/161" rel="prev">
+        <a href="/comics/162" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -167,7 +169,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/163" rel="next">
+        <a href="/comics/164" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -181,9 +183,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/162">https://comicss.art/comics/162</a></p>
-      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/162/organs.png">https://comicss.art/comics/162/organs.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/162/organs.html" rel="alternate">https://comicss.art/comics/162/organs.html</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/163">https://comicss.art/comics/163</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/163/logic-gates.png">https://comicss.art/comics/163/logic-gates.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/163/logic-gates.html" rel="alternate">https://comicss.art/comics/163/logic-gates.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -221,7 +223,7 @@
       </nav>
     </footer>
 
-    <script>let postId = 162;</script>
+    <script>let postId = 163;</script>
     <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
