--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Organs</h1>
+      <h1>Halloween Logic Gates</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,7 +111,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/161" rel="prev">
+        <a href="/comics/162" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -139,11 +139,13 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="comic with four panels showcasing organs. The lungs say 'we breathe air for you', the heart says 'I pump blood for you', the liver says 'I filter was for you', and the brain says 'use table layout, floats everywhere, hardcode all values'">
-        <img src="/comics/162/162-organs-0.webp" alt="" width="350" />
-        <img src="/comics/162/162-organs-1.webp" alt="" width="350" />
-        <img src="/comics/162/162-organs-2.webp" alt="" width="350" />
-        <img src="/comics/162/162-organs-3.webp" alt="" width="350" />
+      <div id="comic-strip" class="" role="img" aria-label="Cartoon with different panels showing a pumpkin made with two circles. Only some parts of it have colors: trick OR treat has the whole pumpkin in orange; trick AND treat only the part where the circles intersect; etc.">
+        <img src="/comics/163/163-logic-gates-0.webp" alt="" width="350" />
+        <img src="/comics/163/163-logic-gates-1.webp" alt="" width="350" />
+        <img src="/comics/163/163-logic-gates-2.webp" alt="" width="350" />
+        <img src="/comics/163/163-logic-gates-3.webp" alt="" width="350" />
+        <img src="/comics/163/163-logic-gates-4.webp" alt="" width="350" />
+        <img src="/comics/163/163-logic-gates-5.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -153,7 +155,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/161" rel="prev">
+        <a href="/comics/162" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -181,9 +183,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/162">https://comicss.art/comics/162</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/162/organs.png">https://comicss.art/comics/162/organs.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/162/organs.html" rel="alternate">https://comicss.art/comics/162/organs.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/163">https://comicss.art/comics/163</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/163/logic-gates.png">https://comicss.art/comics/163/logic-gates.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/163/logic-gates.html" rel="alternate">https://comicss.art/comics/163/logic-gates.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -222,7 +224,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2024-10-20"></script>
+    <script src="/js/data.js?last-updated=2024-10-25"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
