new comic ai edits

--- a/comics/164/index.html
+++ b/comics/164/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #164: AI Edits</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #164: AI Edits" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/164" />
+    <meta property="og:image" content="https://comicss.art/comics/164/thumb.png" />
+    <meta property="og:description" content="cartoon with two panels. A person off-panel asks 'did Alvaro start using AI to edit the comics?', another person in the panel replies 'I don't know. You think he does?'. The first person is now in-panel and has large breasts and a cleavage 'I have a suspicion he did'" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/164">
+    <meta name="twitter:title" content="comiCSS #164: AI Edits">
+    <meta name="twitter:description" content="cartoon with two panels. A person off-panel asks 'did Alvaro start using AI to edit the comics?', another person in the panel replies 'I don't know. You think he does?'. The first person is now in-panel and has large breasts and a cleavage 'I have a suspicion he did'">
+    <meta name="twitter:image" content="https://comicss.art/comics/164/thumb.png">
     <meta name="monetization" content="$ilp.uphold.com/raZZQiMDDWLe" />
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel=canonical href=https://comicss.art />
+    <link rel="canonical" href="https://comicss.art/comics/164" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,7 +96,7 @@
         </ul>
       </nav>
     </header>
-    <main id="main" class="latest">
+    <main id="main">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/165" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="cartoon with two panels. A person off-panel asks 'did Alvaro start using AI to edit the comics?', another person in the panel replies 'I don't know. You think he does?'. The first person is now in-panel and has large breasts and a cleavage 'I have a suspicion he did'">
+      <div id="comic-strip" role="img" class="" aria-label="cartoon with two panels. A person off-panel asks 'did Alvaro start using AI to edit the comics?', another person in the panel replies 'I don't know. You think he does?'. The first person is now in-panel and has large breasts and a cleavage 'I have a suspicion he did'">
         <img src="/comics/164/164-ai-edits-0.webp" alt="" width="350" />
         <img src="/comics/164/164-ai-edits-1.webp" alt="" width="350" />
       </div>
@@ -165,7 +165,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/165" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -179,8 +179,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/164">https://comicss.art/comics/164</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/164/ai-edits.png">https://comicss.art/comics/164/ai-edits.png</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/164">https://comicss.art/comics/164</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/164/ai-edits.png">https://comicss.art/comics/164/ai-edits.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/164/ai-edits.html" rel="alternate">https://comicss.art/comics/164/ai-edits.html</a></p>
 
       <hr />
@@ -219,8 +219,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2024-10-25"></script>
+    <script>let postId = 164;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
