fix issue with images

--- a/comics/164/index.html
+++ b/comics/164/index.html
@@ -142,6 +142,8 @@
       <div id="comic-strip" role="img" class="" aria-label="cartoon with two panels. A person off-panel asks 'did Alvaro start using AI to edit the comics?', another person in the panel replies 'I don't know. You think he does?'. The first person is now in-panel and has large breasts and a cleavage 'I have a suspicion he did'">
         <img src="/comics/164/164-ai-edits-0.webp" alt="" width="350" />
         <img src="/comics/164/164-ai-edits-1.webp" alt="" width="350" />
+        <img src="/comics/164/164-ai-edits-2.webp" alt="" width="350" />
+        <img src="/comics/164/164-ai-edits-3.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
