add attribution to the inspiration for comic

--- a/comics/165/hell.html
+++ b/comics/165/hell.html
@@ -653,6 +653,7 @@ section:nth-child(5) {
     </style>
   </head>
   <body>
+    <!-- Inspired by ashtonmv's A Hot Take https://www.reddit.com/r/LightRoast/comments/bur2x7/a_hot_take/ -->
     <article role="img" aria-label="">
       <section>
         <div class="bubble bubble1 right"></div>
